<resources>
    <string name="app_name">ToDoProj</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="save">Create Task</string>
    <string name="title">Введите заголовок</string>
    <string name="description">Введите описание</string>
    <string name="priority">Приоритет задачи</string>
    <string name="btn_save">Save</string>
    <string name="settings">SETTINGS</string>
    <string name="account">ACCOUNT</string>
    <string name="low_priority">LOW PRIORITY</string>
    <string name="medium_priority">MEDIUM PRIORITY</string>
    <string name="high_priority">HIGH PRIORITY</string>
    <string name="show_completed_tasks">SHOW COMPLETED TASKS</string>
    <string name="show_actual_task">SHOW ACTUAL TASKS</string>
    <string name="priority_menu_item">PIORITY FILTER</string>
    <string name="add_reminder">ADD REMINDER</string>

    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="continue_without_signing">Continue without signing</string>
    <string name="complete_task">Complete Task</string>
    <string name="task_has_been_completed">Task Has Been Completed</string>
    <string name="open_main_app">Task has been completed. Do you want to open main application?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="to_do_list">TO DO LIST</string>

    <string-array name="taskStatus">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>